test/files/neg/t11888.check
t11888.scala:7: error: not found: type nowarn
  def f: nowarn  // but only in annotation context
         ^
1 error
